Fixed a z-index issue with fa-icons

--- a/resources/assets/sass/components/_buttons.scss
+++ b/resources/assets/sass/components/_buttons.scss
@@ -60,6 +60,7 @@ a {
       top: 25px;
       left: 0;
       display: none;
+      z-index: 1;
       a {
         display: inline;
       }
